# GestureControlPandaArm

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: fr3.srdf  initial_positions.yaml  moveit_controllers.yaml  moveit_teleop.rviz  panda_simulated_config.yaml  ros2_controllers.yaml
launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  teleop_launch.py  warehouse_db.launch.py
scripts/: mycontroller.py
